--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -103,7 +103,7 @@
       "textAlignment": "CENTER"
     }
   },
-  
+
   "image#desktop": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
@@ -111,8 +111,7 @@
         "url": "/small-appliances/coffee-makers"
       },
       "alt": "Coffee Makers Collection",
-      "maxWidth": "100%",
-      "maxHeight": "100%"
+      "maxWidth": "100%"
     }
   },
 
@@ -123,8 +122,7 @@
         "url": "/small-appliances/coffee-makers"
       },
       "alt": "Coffee Makers Collection",
-      "maxWidth": "100%",
-      "maxHeight": "100%"
+      "maxWidth": "100%"
     }
   }
 }
