--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -64,7 +64,7 @@
   },
   "sku-selector": {
     "props": {
-      "initialSelection": true,
+      "initialSelection": "empty",
       "showValueNameForImageVariation": true,
       "showVariationsErrorMessage": true
     }
