--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -33,6 +33,9 @@
     ]
   },
   "flex-layout.col#filter": {
+    "props": {
+      "width": "30"
+    },
     "children": [
       "filter-navigator.v3"
     ]
@@ -48,4 +51,5 @@
   "gallery": {
     "blocks": ["product-summary.shelf"]
   }
+  
 }
