--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -51,5 +51,11 @@
   "gallery": {
     "blocks": ["product-summary.shelf"]
   }
+  // "product-summary.shelf": {
+  //   "children": [
+  //     "product-summary-sku-selector"
+  //   ]
+  // }
+  
   
 }
