--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -68,7 +68,7 @@
  "tab-list.item#home2": {
      "props": {
          "tabId": "electronics",
-         "label": "Electronics"
+         "label": "Instagram"
      }
  },
  "tab-content.item#home1": {
@@ -86,7 +86,7 @@
          "tabId": "electronics"
      },
      "children": [
-         "rich-text#home2"
+         "iframe"
      ]
  },
  "rich-text#home1": {
@@ -96,11 +96,12 @@
     "font": "t-heading-3"
   }
 },
-"rich-text#home2": {
+"iframe": {
   "props": {
-    "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-    "textPosition": "CENTER",
-    "font": "t-heading-3"
+    "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
+    "width": 800,
+    "height": 1000
+
   }
 }
 }
