--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -6,7 +6,10 @@
     ]
   },
   "image#landingbanner": {
-
+      "props": {
+          "src": "",
+          "minWidth": "100%"
+      }
   },
   "search-result-layout.customQuery": {
       "props": {
