--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -8,14 +8,16 @@
     "header-layout.desktop": {
         "children": [
             "header-row#notification",
-            "header-row#main"
+            "header-row#main",
+            "header-row#menu"
         ]
     },
     "header-layout.mobile": {
         "children": [
             "header-row#notification",
             "header-row#main-mobile",
-            "header-row#search"
+            "header-row#search",
+            "header-row#menu-mobile"
         ]
     },
     "header-row#main": {
@@ -78,5 +80,19 @@
             "text": "**Free Shipping on orders over $50**",
             "textPosition": "CENTER"
         }
+    },
+    "header-row#menu": {
+        "children": [
+            "header-spacer",
+            "vtex.menu@2.x:menu#categories",
+            "header-spacer"
+        ]
+    },
+    "header-row#menu-mobile": {
+        "children": [
+            "header-spacer",
+            "drawer",
+            "header-spacer"
+        ]
     }
 }
