--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -14,5 +14,20 @@
         "props":{
             "orientation": "horizontal"
         }
+    },
+    "vtex.menu@2.x:submenu#major":{
+        "children":[
+            "vtex.menu@2.x:menu#major"
+        ]
+    },
+    "vtex.menu@2.x:submenu#small":{
+        "children":[
+            "vtex.menu@2.x:menu#small"
+        ]
+    },"vtex.menu@2.x:submenu#electronics":{
+        "children":[
+            "vtex.menu@2.x:menu#electronics"
+        ]
     }
+
 }
