--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -90,9 +90,7 @@
     },
     "header-row#menu-mobile": {
         "children": [
-            "header-spacer",
-            "drawer",
-            "header-spacer"
+            "drawer"
         ]
     }
 }
