--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -15,43 +15,71 @@
             "orientation": "horizontal"
         }
     },
+    "menu-item#major-appliances": {
+        "blocks": ["vtex.menu@2.x:submenu#major"],
+        "props": {
+            "itemProps": {
+                "type": "internal",
+                "href": "#",
+                "text": "Major Appliances"
+            }
+        }
+    },
+    "menu-item#small-appliances": {
+        "blocks": ["vtex.menu@2.x:submenu#small"],
+        "props": {
+            "itemProps": {
+                "type": "internal",
+                "href": "#",
+                "text": "Small Appliances"
+            }
+        }
+    },
+    "menu-item#electronics": {
+        "blocks": ["vtex.menu@2.x:submenu#electronics"],
+        "props": {
+            "itemProps": {
+                "type": "internal",
+                "href": "#",
+                "text": "Electronics"
+            }
+        }
+    },
+
     "vtex.menu@2.x:submenu#major":{
         "children":[
             "vtex.menu@2.x:menu#major"
-        ],
-        "props":{
-            "orientation": "vertical"
-        }
+        ]
     },
     "vtex.menu@2.x:submenu#small":{
         "children":[
             "vtex.menu@2.x:menu#small"
-        ],
-        "props":{
-            "orientation": "vertical"
-        }
+        ]
     },
     "vtex.menu@2.x:submenu#electronics":{
         "children":[
             "vtex.menu@2.x:menu#electronics"
-        ],
-        "props":{
-            "orientation": "vertical"
-        }
+        ]
     },
     "vtex.menu@2.x:menu#major":{
         "children":[
             "menu-item#refrigerators", 
             "menu-item#ovens", 
             "menu-item#washers"
-        ]
+        ],
+        "props":{
+            "orientation": "vertical"
+        }
     },
     "vtex.menu@2.x:menu#small":{
         "children":[
             "menu-item#mixers",
             "menu-item#toasters",
             "menu-item#coffee"
-        ]
+        ],
+        "props":{
+            "orientation": "vertical"
+        }
     },
     "vtex.menu@2.x:menu#electronics":{
         "children":[
@@ -59,7 +87,10 @@
             "menu-item#laptops",
             "menu-item#tvs"
 
-        ]
+        ],
+        "props":{
+            "orientation": "vertical"
+        }
     }
 
 }
